Kubernetes/Kubernetes Crash Course  by Nana TechWorld/manifests/webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
spec:
  # type: NodePort
  # type: ClusterIP
  # type: LoadBalancer
  selector:
    app: webapp
  ports:
  - port: 3000
    # targetPort: 3000
    # nodePort: 30100
