Kubernetes/Kubernetes Crash Course  by Nana TechWorld/manifests/webapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
  labels:
    app: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp
        image: nanajanashia/k8s-demo-app:v1.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
spec:
  # type: NodePort
  # type: ClusterIP
  # type: LoadBalancer
  selector:
    app: webapp
  ports:
  - port: 3000
    # targetPort: 3000
    # nodePort: 30100
