Kubernetes/Kubernetes Crash Course  by Nana TechWorld/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nana-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/nnn"
        backend:
          service:
            name: webapp-service
            port:
              number: 3000
